[tool.poetry]
name = "coomer-bot"
version = "0.1.0"
description = "A bot for the coomer.party website"
authors = ["Alexandre Teles <alexandre.teles@ufba.br>"]
license = "GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiohttp = {version = ">=3.8.4", extras = ["speedups"]}
cytoolz = ">=0.12.1"
py-cord = {version = ">=2.4.1", extras = ["speed"]}
httpx = {version = ">=0.24.0", extras = ["http2", "brotli"]}
httpx-cache = ">=0.9.0"
ujson = ">=5.7.0"
asyncstdlib = "3.10.6"
aiofiles = ">=23.1.0"
loguru = ">=0.7.0"

[tool.poetry.dev-dependencies]
mypy = ">=1.2.0"
types-ujson = ">=5.7.0.3"
types-aiofiles = ">=23.1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
